# learn_opengl

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml  codeql-analysis.yml
src/: Mesh.h  Model.h  default.frag  default.vert  helpers.cpp  main.cpp  primitives.h  renderers.cpp  wabbit.blend
src/include/: default.frag  default.vert  primitives.txt
src/include/91-trava-kolosok/: trava.mtl
src/include/assets/grass/: grass.mtl
src/include/assets/primitives/: primitives.txt
src/include/assets/unicorn/: unicorn.blend  unicorn.glb  unicorn.mtl  unicornMane.dae  unicornMane.mtl  unicornTail.dae  unicorn_hair.stl  unicorn_tail.stl
src/include/assets/wabbit/: wabbit.blend  wabbit.mtl
src/include/backpack/: backpack.mtl
src/include/helpers/: Animation.h  Animator.h  Bone.h  Camera.h  Light.h  Mesh.h  Model.h  ModelAnimation.h  Platform.h  Shader.h  primitives.h
src/include/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/include/shaders/: default.frag  frog.frag  grass.frag  grass.vert  shadowMappingDepth.frag  unicornBody.frag  unicornBody.vert  unicornTail.frag  unicornTail.vert  unicorn_body.vert
